--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -60,6 +60,8 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/shoppingCart.js"></script>
         <script src="scripts/services/localStorageService.js"></script>
+        <script src="scripts/services/shoppingCartService.js"></script>
+        <script src="scripts/controllers/productos.js"></script>
         <!-- endbuild -->
 </body>
 </html>
