--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src="scripts/services/localStorageService.js"></script>
         <script src="scripts/services/shoppingCartService.js"></script>
         <script src="scripts/controllers/productos.js"></script>
+        <script src="scripts/services/productoService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
