branding and gallery look and feel ready

--- a/app/index.html
+++ b/app/index.html
@@ -63,5 +63,6 @@
         <script src="scripts/services/shoppingCartService.js"></script>
         <script src="scripts/controllers/productos.js"></script>
         <!-- endbuild -->
+        <link href='http://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet' type='text/css'>
 </body>
 </html>
