Agregando Info de Sliders e Imagen Principal al producto

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
         <script src="bower_components/lawnchair/src/adapters/dom.js"></script>
         <script src="bower_components/lawnchair/src/plugins/query.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script src="bower_components/underscore/underscore-min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
