--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-view=""></div>
+    <div ng-view="" class="container"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -66,5 +66,7 @@
         <script src="scripts/services/productoService.js"></script>
         <!-- endbuild -->
         <link href='http://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet' type='text/css'>
+
+        <script src="scripts/masonry.min.js"></script>
 </body>
 </html>
