--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-view="" class="container"></div>
+    <div ng-view="" class="content"></div>
+
+    <footer>Todos los derechos reservados &#174; | <span class="logo">Super Zapato</span> 2013</footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
