landing lista y el brandig ya es general

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <h1>Super Zapato</h1>
     <div ng-view="" class="content"></div>
 
     <footer>Todos los derechos reservados &#174; | <span class="logo">Super Zapato</span> 2013</footer>
