--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
         <script src="bower_components/lawnchair/src/plugins/query.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="bower_components/underscore/underscore-min.js"></script>
+        <script src="bower_components/masonry/masonry-min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
@@ -69,7 +70,5 @@
         <script src="scripts/services/productoService.js"></script>
         <!-- endbuild -->
         <link href='http://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet' type='text/css'>
-
-        <script src="scripts/masonry.min.js"></script>
 </body>
 </html>
